--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>目前已經報名人數：0人</h1>
         <p>查詢報名：</p>
         <br>
-        <input type="email" name="email" placeholder="請輸入emil" value="vincentlai49@gmail.com">
+        <input type="email" name="email" placeholder="請輸入emil" value="">
         <button>查詢</button>
         <div class="result">
         </div>
